unpackaged/main/default/objects/Approval_Discount_Tiers__c/Approval_Discount_Tiers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To store tiers of different discount% approvals.  This is for all products. Based on the discount% tiers, approvals are redirected to different users.</description>
    <label>Approval Discount %</label>
</CustomObject>