unpackaged/main/default/objects/Approval_Discount_Tiers__c/fields/ePT_Tier_1_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>ePT_Tier_1_Max_Discount__c</fullName>
    <label>ePT Tier 1 Max Discount %</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>