unpackaged/main/default/objects/Approval_Discount_Tiers__c/fields/Events_Tier_1_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Events_Tier_1_Max_Discount__c</fullName>
    <description>This is for Events products.</description>
    <label>Events Tier 1 Max Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>