unpackaged/main/default/objects/Approval_Discount_Tiers__c/fields/Homepage_Tier_2_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Homepage_Tier_2_Max_Discount__c</fullName>
    <label>Homepage Tier 2 Max Discount %</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>