unpackaged/main/default/objects/Approval_Discount_Tiers__c/fields/Tier_1_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Max_Discount__c</fullName>
    <label>PG Tier 1 Max Discount %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>